terraform/applications/ingress-controller/ingress_controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.10.1
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
    nodePort: 30006
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
    nodePort: 30007
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.10.1
  name: ingress-nginx-controller-admission
  namespace: ingress-nginx
spec:
  ports:
  - appProtocol: https
    name: https-webhook
    port: 443
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  labels:
#    app.kubernetes.io/component: controller
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#    app.kubernetes.io/version: 1.10.1
#  name: ingress-nginx-controller
#  namespace: ingress-nginx
#spec:
#  minReadySeconds: 0
#  revisionHistoryLimit: 10
#  selector:
#    matchLabels:
#      app.kubernetes.io/component: controller
#      app.kubernetes.io/instance: ingress-nginx
#      app.kubernetes.io/name: ingress-nginx
#  strategy:
#    rollingUpdate:
#      maxUnavailable: 1
#    type: RollingUpdate
#  template:
#    metadata:
#      labels:
#        app.kubernetes.io/component: controller
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/part-of: ingress-nginx
#        app.kubernetes.io/version: 1.10.1
#    spec:
#      containers:
#      - args:
#        - /nginx-ingress-controller
#        - --election-id=ingress-nginx-leader
#        - --controller-class=k8s.io/ingress-nginx
#        - --ingress-class=nginx
#        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
#        - --validating-webhook=:8443
#        - --validating-webhook-certificate=/usr/local/certificates/cert
#        - --validating-webhook-key=/usr/local/certificates/key
#        - --watch-ingress-without-class=true
#        - --enable-metrics=false
#        - --publish-status-address=localhost
#        env:
#        - name: POD_NAME
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.name
#        - name: POD_NAMESPACE
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
#        - name: LD_PRELOAD
#          value: /usr/local/lib/libmimalloc.so
#        image: registry.k8s.io/ingress-nginx/controller:v1.10.1@sha256:e24f39d3eed6bcc239a56f20098878845f62baa34b9f2be2fd2c38ce9fb0f29e
#        imagePullPolicy: IfNotPresent
#        lifecycle:
#          preStop:
#            exec:
#              command:
#              - /wait-shutdown
#        livenessProbe:
#          failureThreshold: 5
#          httpGet:
#            path: /healthz
#            port: 10254
#            scheme: HTTP
#          initialDelaySeconds: 10
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
#        name: controller
#        ports:
#        - containerPort: 80
#          hostPort: 80
#          name: http
#          protocol: TCP
#        - containerPort: 443
#          hostPort: 443
#          name: https
#          protocol: TCP
#        - containerPort: 8443
#          name: webhook
#          protocol: TCP
#        readinessProbe:
#          failureThreshold: 3
#          httpGet:
#            path: /healthz
#            port: 10254
#            scheme: HTTP
#          initialDelaySeconds: 10
#          periodSeconds: 10
#          successThreshold: 1
#          timeoutSeconds: 1
#        resources:
#          requests:
#            cpu: 100m
#            memory: 90Mi
#        securityContext:
#          allowPrivilegeEscalation: false
#          capabilities:
#            add:
#            - NET_BIND_SERVICE
#            drop:
#            - ALL
#          readOnlyRootFilesystem: false
#          runAsNonRoot: true
#          runAsUser: 101
#          seccompProfile:
#            type: RuntimeDefault
#        volumeMounts:
#        - mountPath: /usr/local/certificates/
#          name: webhook-cert
#          readOnly: true
#      dnsPolicy: ClusterFirst
#      nodeSelector:
#        ingress-ready: "true"
#        kubernetes.io/os: linux
#      serviceAccountName: ingress-nginx
#      terminationGracePeriodSeconds: 0
#      tolerations:
#      - effect: NoSchedule
#        key: node-role.kubernetes.io/master
#        operator: Equal
#      - effect: NoSchedule
#        key: node-role.kubernetes.io/control-plane
#        operator: Equal
#      volumes:
#      - name: webhook-cert
#        secret:
#          secretName: ingress-nginx-admission
#---
#apiVersion: batch/v1
#kind: Job
#metadata:
#  labels:
#    app.kubernetes.io/component: admission-webhook
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#    app.kubernetes.io/version: 1.10.1
#  name: ingress-nginx-admission-create
#  namespace: ingress-nginx
#spec:
#  template:
#    metadata:
#      labels:
#        app.kubernetes.io/component: admission-webhook
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/part-of: ingress-nginx
#        app.kubernetes.io/version: 1.10.1
#      name: ingress-nginx-admission-create
#    spec:
#      containers:
#      - args:
#        - create
#        - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
#        - --namespace=$(POD_NAMESPACE)
#        - --secret-name=ingress-nginx-admission
#        env:
#        - name: POD_NAMESPACE
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
#        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.4.1@sha256:36d05b4077fb8e3d13663702fa337f124675ba8667cbd949c03a8e8ea6fa4366
#        imagePullPolicy: IfNotPresent
#        name: create
#        securityContext:
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#            - ALL
#          readOnlyRootFilesystem: true
#          runAsNonRoot: true
#          runAsUser: 65532
#          seccompProfile:
#            type: RuntimeDefault
#      nodeSelector:
#        kubernetes.io/os: linux
#      restartPolicy: OnFailure
#      serviceAccountName: ingress-nginx-admission
#---
#apiVersion: batch/v1
#kind: Job
#metadata:
#  labels:
#    app.kubernetes.io/component: admission-webhook
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#    app.kubernetes.io/version: 1.10.1
#  name: ingress-nginx-admission-patch
#  namespace: ingress-nginx
#spec:
#  template:
#    metadata:
#      labels:
#        app.kubernetes.io/component: admission-webhook
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/part-of: ingress-nginx
#        app.kubernetes.io/version: 1.10.1
#      name: ingress-nginx-admission-patch
#    spec:
#      containers:
#      - args:
#        - patch
#        - --webhook-name=ingress-nginx-admission
#        - --namespace=$(POD_NAMESPACE)
#        - --patch-mutating=false
#        - --secret-name=ingress-nginx-admission
#        - --patch-failure-policy=Fail
#        env:
#        - name: POD_NAMESPACE
#          valueFrom:
#            fieldRef:
#              fieldPath: metadata.namespace
#        image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.4.1@sha256:36d05b4077fb8e3d13663702fa337f124675ba8667cbd949c03a8e8ea6fa4366
#        imagePullPolicy: IfNotPresent
#        name: patch
#        securityContext:
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#            - ALL
#          readOnlyRootFilesystem: true
#          runAsNonRoot: true
#          runAsUser: 65532
#          seccompProfile:
#            type: RuntimeDefault
#      nodeSelector:
#        kubernetes.io/os: linux
#      restartPolicy: OnFailure
#      serviceAccountName: ingress-nginx-admission
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.10.1
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.10.1
  name: ingress-nginx-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ingress-nginx-controller-admission
      namespace: ingress-nginx
      path: /networking/v1/ingresses
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  sideEffects: None
